[tool.poetry]
name = "htmlizer"
version = "0.1.0"
description = "Gere html com os tipos do Python!"
authors = ["mv_taliani <mv.taliani@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.3"
flask-wtf = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
